--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   app:
-    image: auto-tests-prod
+    image: auto-tests-prod:0.0.1 # Change this version to match the version in pom.xml for consistency
+    container_name: auto-tests-app
     build:
       context: .
       dockerfile: Dockerfile
@@ -10,7 +11,6 @@ services:
       - "8080:8080"
     volumes:
       - db:/app/db
-      - logs:/mnt/logs
       - uploads:/app/uploads
     environment:
       DB_PATH: /app/db/dbProd.sqlite
@@ -18,6 +18,5 @@ services:
     restart: unless-stopped
 
 volumes:
-  db:   # For saving the db file dbProd.sqlite
-  logs: # For saving log files in /mnt/logs
-  uploads: # For uploads resources
+  db:  # For saving the db file dbProd.sqlite
+  uploads: # For upload resources
