--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -4,6 +4,11 @@
       "name": "dct-base.domain",
       "type": "java.lang.String",
       "description": "Description for dct-base.domain."
+    },
+    {
+      "name": "logging.file-path",
+      "type": "java.lang.String",
+      "description": "Description for logging.file-path."
     }
   ]
 }
