--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,7 +1,7 @@
 services:
   app:
-    image: thoaidc/auto-tests-prod:0.0.1  # Pull image from Docker Hub
-    container_name: auto-tests-app    # Friendly name for the container
+    image: thoaidc/auto-tests-app:0.0.1  # Pull image from Docker Hub
+    container_name: auto-tests-app       # Friendly name for the container
     env_file:
       - .env                    # Load environment variables from the .env file
     ports:
